# fTemplateModules

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: baseprompts.ftmpl  prompts.ftmpl  pydocftmpl.py  test.py  testDebug.py  testPydoc.py  unparse.py
src/ftemplatemodules/: ftemplatemodules.py
